# devportal

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc  CONTRIBUTING.md  README.md  _typos.toml  astro.config.mjs  ec.config.mjs  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json  typos.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md  💡-resource-submission.md  📝-documentation-feedback.md  📝-update-documentation.md  🧹-chore.md
.github/workflows/: acceptance.yml  gh-pages-deploy.yml  main.yml  publish.yaml
examples/: hello.ts
imports/puya/: .gitignore  Makefile  conf.py  index.rst  pyproject.toml
imports/puya/_build/markdown/: index.mdx
imports/puya/_build/markdown/apidocs/algopy/: algopy.arc4.mdx  algopy.gtxn.mdx  algopy.itxn.mdx  algopy.mdx  algopy.op.mdx
imports/scripts/: algokit-cli.ts  algokit-utils.ts  algokit.ts  bun_all.sh  client-generator.ts  nodekit.ts  puya.ts  subscriber.ts  test.ts  testing.ts
public/: CNAME
scripts/: generate-diagrams.ts  generate-docs.ts  generate-openapi-docs.ts  rest-openapi-config.json
src/: .pre-commit-config.yaml  env.d.ts
src/components/: ArcsList.astro  ArcsTable.astro  CodeMarker.astro  CodeMarker.ts  CodeUri.astro  CodeUriFetch.ts  CtaButton.astro  CustomThemeProvider.astro  DropDown.astro  FeatureCta.astro  FeatureDetailCta.astro  Figure.astro  Footer.astro  Header.astro  Hero.astro  HomepageHero.astro  IconCard.astro  IconCardGrid.astro  Icons.ts  LinkInfoCard.astro  LinkInfoCardGrid.astro  (+10 more)
(+1473 files in other folders)
