[tool.poetry]
name = "puya-devportal-import"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^8.1.3"
sphinx-autodoc2 = "^0.5.0"
myst-parser = "^4.0.0"
sphinx-markdown-builder = {path = "../../../../other/sphinx-markdown-builder", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
